# tap-typeform

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  catalog.json  example.config.json  properties.json  pyproject.toml  setup.py  stitch_setup_documentation.md  utils.py
.circleci/: config.yml
tap_typeform/: __init__.py  client.py  context.py  discover.py  http.py  schema.py  schemas.py  streams.py  sync.py  utils.py
tap_typeform/schemas/: answers.json  forms.json  landings.json  questions.json  submitted_landings.json  unsubmitted_landings.json
tests/: base.py  test_streams.py  test_typeform_all_fields.py  test_typeform_automatic_fields.py  test_typeform_bookmarks.py  test_typeform_discovery.py  test_typeform_field_selection.py  test_typeform_pagination.py  test_typeform_start_date.py
tests/unittests/: test_bookmark_handling.py  test_compare.py  test_dev_mode.py  test_discover.py  test_exception_handling.py  test_main.py  test_page_size.py  test_request_timeout.py  test_sub_questions.py  test_sync.py  test_sync_obj.py
